Added ability to disable specific security headers
Fix for issue #23

--- a/src/Sample/DemoSite/Views/_ViewImports.cshtml
+++ b/src/Sample/DemoSite/Views/_ViewImports.cshtml
@@ -16,5 +16,8 @@
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@addTagHelper *, Jhoose.Security.Core
+
 @*addTagHelper *, EpiserverAdmin
-@addTagHelper *, Jhoose.Security.Core*@
+    @addTagHelper *, Jhoose.Security.Core*@
