--- a/src/Jhoose.Security/Jhoose.Security.Views/Views/JhooseSecurityAdmin/index.cshtml
+++ b/src/Jhoose.Security/Jhoose.Security.Views/Views/JhooseSecurityAdmin/index.cshtml
@@ -4,7 +4,9 @@
 <html>
 <head>
     <title>Content Security Policy</title>
+    <!--
     <base href="/EPiServer/Jhoose.Security/jhoosesecurityadmin" />
+    -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,5 +32,5 @@
     </div>
 
 </body>
-    <script src="/EPiServer/Jhoose.Security/ClientResources/csp-app.js"> </script>
+    <script  src="ClientResources/csp-app.js"> </script>
 </html>
