--- a/src/Jhoose.Security/src/css/app.css
+++ b/src/Jhoose.Security/src/css/app.css
@@ -3,7 +3,7 @@
     padding-top: 0px;
 }
 
-#csp-root * {
+#csp-root p, #csp-root h1, #csp-root h2, #csp-root h3, #csp-root h4, #csp-root h5, #csp-root h6 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     color: rgba(0, 0, 0, 0.88);
     word-break: break-word;
