--- a/src/Jhoose.Security/src/css/app.css
+++ b/src/Jhoose.Security/src/css/app.css
@@ -1,4 +1,4 @@
-* {
+p, h1, h2, h3, h4, h5, h6 {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     color: rgba(0, 0, 0, 0.88);
     word-break: break-word;
